[package]
name = "thru"
version = "0.1.0"
edition = "2021"
repository = "https://github.com/rtdavis22/rtcache"
license = "Apache-2.0 OR MIT"
description = "A read-through/write-back cache"
keywords = ["cache"]
categories = ["caching"]

[dependencies]
anyhow = "1.0"
async-trait = "0.1.71"
tide = "0.16.0"
tokio = { version = "1.35.1", features = ["rt-multi-thread", "macros", "sync", "time" ] }

[[example]]
name = "example"
